--- a/WallRider/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
+++ b/WallRider/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
@@ -282,7 +282,7 @@ LastLevel=/Engine/Maps/Templates/OpenWorld
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
-Object=
+Object="\"Object\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -409,7 +409,7 @@ CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 
 [ModuleFileTracking]
-WallRider.TimeStamp=2024.04.18-15.26.49
+WallRider.TimeStamp=2024.04.18-15.29.19
 WallRider.LastCompileMethod=Runtime
 StorageServerClient.TimeStamp=2023.11.27-09.50.31
 StorageServerClient.TimeStamp=2023.11.27-09.50.31
@@ -3116,7 +3116,7 @@ RecentAssetEditors=WidgetBlueprintEditor
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.FavoritesAreaExpanded=False
 ContentBrowserDrawer.PathAreaExpanded=True
-ContentBrowserDrawer.CollectionAreaExpanded=False
+ContentBrowserDrawer.CollectionAreaExpanded=True
 ContentBrowserDrawer.FavoritesSearchAreaExpanded=False
 ContentBrowserDrawer.PathSearchAreaExpanded=False
 ContentBrowserDrawer.CollectionSearchAreaExpanded=False
@@ -3125,8 +3125,8 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Map_CPP_Classes
-ContentBrowserDrawer.PluginFilters=
+ContentBrowserDrawer.SelectedPaths=/Classes_Engine
+ContentBrowserDrawer.PluginFilters=Content Only Plugins
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
 FavoritePaths=
@@ -3141,7 +3141,7 @@ ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
 ContentBrowserTab1.CollectionAreaExpanded=False
 ContentBrowserTab1.FavoritesSearchAreaExpanded=False
-ContentBrowserTab1.PathSearchAreaExpanded=False
+ContentBrowserTab1.PathSearchAreaExpanded=True
 ContentBrowserTab1.CollectionSearchAreaExpanded=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.150000006
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
