--- a/WallRider/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
+++ b/WallRider/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
@@ -409,8 +409,8 @@ CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 
 [ModuleFileTracking]
-WallRider.TimeStamp=2024.04.18-15.29.19
-WallRider.LastCompileMethod=Runtime
+WallRider.TimeStamp=
+WallRider.LastCompileMethod=Unknown
 StorageServerClient.TimeStamp=2023.11.27-09.50.31
 StorageServerClient.TimeStamp=2023.11.27-09.50.31
 StorageServerClient.LastCompileMethod=Unknown
@@ -3107,7 +3107,7 @@ EditorStyleSettings=True
 SourceCodeAccessSettings=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 None=======
 RecentAssetEditors=WidgetBlueprintEditor
