--- a/.gitignore
+++ b/.gitignore
@@ -72,7 +72,7 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
-Wallrider.build.cs
-Wallrider.cpp
-Wallrider.h
+WallRider.Build.cs
+WallRider.cpp
+WallRider.h
 
