Reworked Action System to basic Function calls
Also added IInteractable Interface

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -226,3 +226,7 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/Wallrider.Entity.xLocation",NewName="/Script/Wallrider.Entity.XLocation")
++PropertyRedirects=(OldName="/Script/Wallrider.Entity.yLocation",NewName="/Script/Wallrider.Entity.YLocation")
