Mostly implemented AEntity.cpp | Changed UInteractable.h to use pointers

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -230,3 +230,4 @@ ManualIPAddress=
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/Wallrider.Entity.xLocation",NewName="/Script/Wallrider.Entity.XLocation")
 +PropertyRedirects=(OldName="/Script/Wallrider.Entity.yLocation",NewName="/Script/Wallrider.Entity.YLocation")
++EnumRedirects=(OldName="/Script/Wallrider.EFactionType",ValueChanges=(("Shadewalker","ShadeWalker")))
