--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -231,3 +231,4 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/Wallrider.Entity.xLocation",NewName="/Script/Wallrider.Entity.XLocation")
 +PropertyRedirects=(OldName="/Script/Wallrider.Entity.yLocation",NewName="/Script/Wallrider.Entity.YLocation")
 +EnumRedirects=(OldName="/Script/Wallrider.EFactionType",ValueChanges=(("Shadewalker","ShadeWalker")))
++ClassRedirects=(OldName="/Script/Wallrider.AToken",NewName="/Script/Wallrider.Token")
