--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -232,3 +232,5 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/Wallrider.Entity.yLocation",NewName="/Script/Wallrider.Entity.YLocation")
 +EnumRedirects=(OldName="/Script/Wallrider.EFactionType",ValueChanges=(("Shadewalker","ShadeWalker")))
 +ClassRedirects=(OldName="/Script/Wallrider.AToken",NewName="/Script/Wallrider.Token")
++PropertyRedirects=(OldName="/Script/Wallrider.Entity.xIndex",NewName="/Script/Wallrider.Entity.XIndex")
++PropertyRedirects=(OldName="/Script/Wallrider.Entity.yIndex",NewName="/Script/Wallrider.Entity.YIndex")
