Added Card Classes

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -232,3 +232,4 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/Wallrider.Entity.yLocation",NewName="/Script/Wallrider.Entity.YLocation")
 +EnumRedirects=(OldName="/Script/Wallrider.EFactionType",ValueChanges=(("Shadewalker","ShadeWalker")))
 +ClassRedirects=(OldName="/Script/Wallrider.AToken",NewName="/Script/Wallrider.Token")
++FunctionRedirects=(OldName="/Script/Wallrider.TimedEvent.FinishEvent",NewName="/Script/Wallrider.TimedEvent.EndEvent")
