--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Engine/Maps/Templates/OpenWorld.OpenWorld
+EditorStartupMap=/Game/UI/BP_MainWorld.BP_MainWorld
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -10,9 +10,9 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld.OpenWorld
+GameDefaultMap=/Game/UI/BP_MainWorld.BP_MainWorld
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GlobalDefaultGameMode=/Game/StarterContent/Blueprints/HUDOnlyGameMode.HUDOnlyGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
@@ -236,3 +236,4 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/Wallrider.Entity.yIndex",NewName="/Script/Wallrider.Entity.YIndex")
 +PropertyRedirects=(OldName="/Script/Wallrider.Board.rowCount",NewName="/Script/Wallrider.Board.RowCount")
 +PropertyRedirects=(OldName="/Script/Wallrider.Board.columnCount",NewName="/Script/Wallrider.Board.ColumnCount")
+
